changed min width media query for project routes and fixed dark mode links

--- a/styles/Archive.module.css
+++ b/styles/Archive.module.css
@@ -164,7 +164,7 @@
   align-items: center;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 450px) {
   .backdark,
   .backlight,
   .forwardlight,
@@ -172,9 +172,7 @@
     width: 50px;
     height: 50px;
   }
-}
 
-@media (min-width: 450px) {
   .title {
     font-size: 2em;
   }
