--- a/styles/Cryptox.module.css
+++ b/styles/Cryptox.module.css
@@ -185,7 +185,7 @@
   }
 }
 
-@media (min-width: 400px) {
+@media (min-width: 450px) {
   .backdark,
   .backlight,
   .forwardlight,
