--- a/styles/Logo.module.css
+++ b/styles/Logo.module.css
@@ -15,7 +15,7 @@
   height: 70px;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 450px) {
   .portfoliologo,
   .logo {
     width: 100%;
