--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -156,7 +156,7 @@
   margin-bottom: 0.8em;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 450px) {
   .backdark,
   .backlight,
   .forwardlight,
